bug fixes for static links and removed unneccesary <br/> tags

--- a/m.hydraulic_shear.htm
+++ b/m.hydraulic_shear.htm
@@ -23,11 +23,10 @@
             <div class="header-content">
                 <h1>New Hydraulic Sheet Metal Shear machines</h1>
                 <div class="header-content-cards">
+                   
                     <p>
-                        <img src="http://www.americanmachinetools.com/images/Dreis-Krump-Logo.gif" alt="Chicago Dreis &amp; Krump Press Brakes,Hand Brakes, Box and Pan brakes, and  Shears"></p>
-                    <p>
-                        <a href="https://www.bbb.org/online/consumer/cks.aspx?id=1090114163628" target="_blank"><img src="http://www.americanmachinetools.com/images/bbbsealh1US.gif" alt="American Machine Tools Company is accedited by the Better Business Bureau! Click to verify."></a>
-
+                        <a href="https://www.bbb.org/online/consumer/cks.aspx?id=1090114163628" target="_blank"><img src="http://www.americanmachinetools.com/images/bbbsealh1US.gif" alt="American Machine Tools Company is accedited by the Better Business Bureau! Click to verify."></a></p>
+					<p>
                         <img src="http://www.americanmachinetools.com/images/credit_cards.jpg" alt="We accept credit cards for up to $10,000.">
                     </p>
                 </div>
@@ -68,7 +67,7 @@
                     </ul>
 
 
-                    <p class="text-center bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=JET+GHB-1340A+Lathe">Click to request a quote for this machine</a></p>
+                    <p class="text-center bold-text"><a href="RFQ.asp?model=Dreis-Krump+FS-5216+Sheet+Metal+Foot+Shear+RFQ&form=3">Click to request a quote for this machine</a></p>
 
 
                 </div>
@@ -77,7 +76,7 @@
                     <p>
                         <img src="http://www.americanmachinetools.com/images/jet_air_shear.jpg" alt="JET air powered Pneumatic Shear">
                     </p>
-                    <p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+PS-1652E+Sheet+Metal+Shear+RFQ&amp;form=3" target="_blank">Click 
+                    <p class="bold-text text-center"><a href="RFQ.asp?model=Jet+PS-1652E+Sheet+Metal+Shear+RFQ&amp;form=3" target="_blank">Click 
               to Request this Machine Quote</a>
                         <p>
                             <p class="bold-text text-justify">Model PS-1652E with 16 gauge x 52 inch capacity<br>this machine connects to your air compressor. </p>
@@ -128,18 +127,17 @@
                             <tr>
                                 <td></td>
                                 <td><b>HS-414<br>
-		  <a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+HS-414+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
+		  <a href="RFQ.asp?model=Dreis-Krump+HS-414+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
 		  
                 Request
                 a Quote</a></b></td>
-                                <td><b>HS-410<br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+HS-410+Sheet+Metal+Shears+RFQ&form=3" target="_blank"> 
-                Request
-                a Quote</a></b></td>
-                                <td><b>HS-510<br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+HS-510+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
+                                <td><b>HS-410<br><a href="RFQ.asp?model=Dreis-Krump+HS-410+Sheet+Metal+Shears+RFQ&form=3" target="_blank"> 
+                Request a Quote</a></b></td>
+                                <td><b>HS-510<br><a href="RFQ.asp?model=Dreis-Krump+HS-510+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
                 Request
                 a Quote</a></b>
                                 </td>
-                                <td><b>HS-612<br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+HS-612+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
+                                <td><b>HS-612<br><a href="RFQ.asp?model=Dreis-Krump+HS-612+Sheet+Metal+Shear+RFQ&amp;form=3" target="_blank"> 
                 Request
                 a Quote</a></b></td>
                             </tr>
@@ -231,7 +229,7 @@ Range</b></td>
                         <li><a href="http://www.youtube.com/watch?v=Bje5MLh3x_U&amp;context=C4d268e2ADvjVQa1PpcFOK17bCJGEdOBjglu463wO0ltJ8T6Y6Pss="><b>CLICK 
               TO SEE A VIDEO</b></a></li>
                         <li><a href="https://www.youtube.com/watch?v=zZjeF4NudqE"><b>CLICK 
-              TO SEE ANOthER VIDEO</b></a> <br></li>
+              TO SEE ANOTHER VIDEO</b></a> <br></li>
                     </ul>
                     <p class="bold-text text-center">EHS Model Differences:</p>
                     <ul>
@@ -251,18 +249,12 @@ Range</b></td>
                         <table>
 
                             <tr>
-                                <td><b>Chicago D & K
-Model Number</b></td>
-                                <td><b>Capacity
-(inches)</b></td>
-                                <td><b>Capacity
-(mm)</b></td>
+                                <td><b>Chicago D & K Model Number</b></td>
+                                <td><b>Capacity(inches)</b></td>
+                                <td><b>Capacity(mm)</b></td>
                                 <td><b>SPM</b></td>
-                                <td><b>N.C.
-Back
-Gauge</b></td>
-                                <td><b>Front
-gauge</b></td>
+                                <td><b>N.C. BackGauge</b></td>
+                                <td><b>Front gauge</b></td>
                                 <td><b>Cutting
 Angle</b></td>
                                 <td><b>Motor
@@ -589,7 +581,7 @@ H.P.</b></td>
 
                                 <tr>
                                     <td>HN-10<br>
-                                        <a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Corner+Notcher+HN-10+RFQ&form=2" target="_blank">Request 
+                                        <a href="RFQ.asp?model=Dreis-Krump+Corner+Notcher+HN-10+RFQ&form=2" target="_blank">Request 
               Quote</a></td>
                                     <td>10 gauge (.135")</td>
                                     <td>16 gauge (.06)</td>
@@ -602,7 +594,7 @@ H.P.</b></td>
                                 </tr>
                                 <tr>
                                     <td>HN-25<br>
-                                        <a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Metal+Notcher+HN-25+RFQ&form=2" target="_blank">Request 
+                                        <a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Metal+Notcher+HN-25+RFQ&form=2" target="_blank">Request 
               Quote</a></td>
                                     <td>1/4"</td>
                                     <td>10 gauge (.135")</td>
@@ -660,7 +652,7 @@ H.P.</b></td>
             <div class="footer-mid">
                 <b class="footer-mid-amt">American Machine Tools Corp</b><br/> 5864 Northwest Hwy<br/> Chicago IL 60631 USA<br/> Phone: 773-334-5000<br/> Fax: 773-442-0314
                 <p>
-                    <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Lathe+Information+Request"><b>Click to email Us</b></a>
+                    <a href="RFQ.asp?model=Catalog+Information+Request"><b>Click to email Us</b></a>
                 </p>
             </div>
             <div class="footer-mid">
