--- a/m.press_brake.htm
+++ b/m.press_brake.htm
@@ -101,7 +101,7 @@
 											<td class="bold-text">Weight<br/>Lbs</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-4015+RFQ&form=3">HPB 4015</a></td>
+											<td class="bold-text">HPB 4015<br/><a href="RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-4015+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>45</td>
 											<td>4' 11"</td>
 											<td>3' 9"</td>
@@ -112,7 +112,7 @@
 											<td>6000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-6020+RFQ&form=3">HPB 6020</a></td>
+											<td class="bold-text">HPB 6020<br/><a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-6020+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>65</td>
 											<td>6' 6"</td>
 											<td>5' 3"</td>
@@ -123,7 +123,7 @@
 											<td>8000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-6026+RFQ&form=3">HPB 6026</a></td>
+											<td class="bold-text">HPB 6026<br/><a href="RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-6026+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>65</td>
 											<td>8' 6"</td>
 											<td>7'</td>
@@ -134,7 +134,7 @@
 											<td>9000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-6032+RFQ&form=3">HPB 6032</a></td>
+											<td class="bold-text">HPB 6032<br/><a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-6032+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>65</td>
 											<td>10' 6"</td>
 											<td>9'</td>
@@ -145,7 +145,7 @@
 											<td>10000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-8020+RFQ&form=3">HPB 8020</a></td>
+											<td class="bold-text">HPB 8020<br/><a href="RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-8020+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>90</td>
 											<td>6' 6"</td>
 											<td>5' 1"</td>
@@ -156,7 +156,7 @@
 											<td>9000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-8026+RFQ&form=3">HPB 8026</a></td>
+											<td class="bold-text">HPB 8026<br/><a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-8026+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>90</td>
 											<td>8' 6"</td>
 											<td>7'</td>
@@ -167,7 +167,7 @@
 											<td>11000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-8032+RFQ&form=3">HPB 8032</a></td>
+											<td class="bold-text">HPB 8032<br/><a href="RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-8032+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>90</td>
 											<td>10' 6"</td>
 											<td>9'</td>
@@ -178,7 +178,7 @@
 											<td>12000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-11026+RFQ&form=3">HPB 11026</a></td>
+											<td class="bold-text">HPB 11026<br/><a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-11026+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>120</td>
 											<td>8' 6"</td>
 											<td>6' 8"</td>
@@ -189,7 +189,7 @@
 											<td>14000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-11026+RFQ&form=3">HPB 11032</a></td>
+											<td class="bold-text">HPB 11032<br/><a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-11032+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>120</td>
 											<td>10' 6"</td>
 											<td>8' 8"</td>
@@ -200,7 +200,7 @@
 											<td>15000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-11040+RFQ&form=3">HPB 11040</a></td>
+											<td class="bold-text">HPB 11040<br/><a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-11040+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>120</td>
 											<td>13' 1"</td>
 											<td>11' 3"</td>
@@ -211,7 +211,7 @@
 											<td>17000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-16032+RFQ&form=3">HPB 16032</a></td>
+											<td class="bold-text">HPB 16032<br/><a href="RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-16032+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>175</td>
 											<td>10' 6"</td>
 											<td>8' 6"</td>
@@ -222,7 +222,7 @@
 											<td>21000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-16040+RFQ&form=3">HPB 16040</a></td>
+											<td class="bold-text">HPB 16040<br/><a href="RFQ.asp?model=Dreis-Krump+Hyd+Press+Brake+HPB-16040+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>175</td>
 											<td>13' 1"</td>
 											<td>11' 1"</td>
@@ -233,7 +233,7 @@
 											<td>27000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-22032+RFQ&form=3">HPB 22032</a></td>
+											<td class="bold-text">HPB 22032<br/><a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Press+Brake+HPB-22032+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>240</td>
 											<td>10' 6"</td>
 											<td>8' 2"</td>
@@ -244,7 +244,7 @@
 											<td>25000</td>
 										</tr>
 										<tr>
-											<td class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+Hyd+Press+Brake+HPB-22040+RFQ&form=3">HPB 22040</a></td>
+											<td class="bold-text">HPB 22040<br/><a href="RFQ.asp?model=Chicago+Dreis-Krump+Hyd+Press+Brake+HPB-22040+RFQ&form=3">Click to Request a Quote</a></td>
 											<td>240</td>
 											<td>13' 1"</td>
 											<td>10' 10"</td>
@@ -265,7 +265,7 @@
 						<h3>Edwards Hydraulic Press &amp; Brake</h3>
 						<img src="http://www.americanmachinetools.com/images/edwards_40_press.jpg" alt="Photo of Edwards 40 Ton Hydraulic Press with Press Brake Tooling option in place">
 						<p class="bold-text text-center">
-							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+40+Ton+Hydraulic+Press&form=3">Click to Request a formal Quote for this machine</a>
+							<a href="RFQ.asp?model=Edwards+40+Ton+Hydraulic+Press&form=3">Click to Request a formal Quote for this machine</a>
 						</p>
 						<ul>
 							<li><b>40 Tons capacity hydraulic shop press</b></li>
@@ -304,7 +304,7 @@
                 Phone: 773-334-5000<br/>
                 Fax: 773-442-0314
                 <p>
-                    <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Lathe+Information+Request"><b>Click to email Us</b></a>
+                    <a href="RFQ.asp?model=Catalog+and+Press+Brake+Information+Request"><b>Click to email Us</b></a>
                 </p>
             </div>
             <div class="footer-mid">
