Updated RFQ links

--- a/m.cold_saws.htm
+++ b/m.cold_saws.htm
@@ -39,7 +39,7 @@
                         <h3>Jet Model JF225 Portable Metal Cutting Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/jet_J-F225_circular.jpg" alt="Jet J-F225 portable metal cutting Cold Saw">
                         <p class="bold-text text-center">
-                            <a href="RFQ.asp?model=Jet+JF225+Portable+Cold+Saw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+JF225+Portable+Cold+Saw&form=2">Click to Request this Quote</a>
                         </p>
                         <ul>
                             <li>Cutting Capacity:
@@ -65,7 +65,7 @@
                         <h3>Jet CS-275 Metal Cutting Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/Jet_cs275_coldsaw.jpg" alt="Jet CS-275 metal cutting circular cold_saw machine">
                         <p class="bold-text text-center">
-                            <a href="RFQ.asp?model=Jet+CS-275+ColdSaw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+CS-275+ColdSaw&form=2">Click to Request this Quote</a>
                         </p>
                         <ul>
                             <li>Cutting Capacity:
@@ -91,7 +91,7 @@
                         <h3>Jet CS-315 Metal Cutting Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/jet_cs315_saw.jpg" alt="Jet CS-315 metal cutting coldsaw machine">
                         <p class="bold-text text-center">
-                            <a href="RFQ.asp?model=Jet+CS-315+ColdSaw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+CS-315+ColdSaw&form=2">Click to Request this Quote</a>
                         </p>
                         <ul>
                             <li>Cutting Capacity: 
@@ -118,7 +118,7 @@
                         <h3>Jet JCK350-2K Non-Ferrous Cold Saw</h3>
                         <img src="http://www.americanmachinetools.com/images/Jet_JFK350-2K_coldsaw.jpg" alt="Jet JFK350-2K metal cutting coldsaw machine">
                         <p class="bold-text text-center">
-                            <a href="RFQ.asp?model=Jet+JFK350-2K+Cold+Saw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+JFK350-2K+Cold+Saw&form=2">Click to Request this Quote</a>
                         </p>
                         <ul>
                             <li>Cutting Capacity: 
@@ -147,7 +147,7 @@
                         </p>
                         <img src="http://www.americanmachinetools.com/images/Dake_Super_cold_saw.jpg" alt="Dake Super Cut Circular Coldsaw machine">
                         <h4 class="bold-text">Dake Model Cut 250</h4>
-                        <p class="bold-text"><a href="RFQ.asp?model=Dake+Cut+250+Cold+Saw&form=2">Click to Request this Quote</a></p>
+                        <p class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Cut+250+Cold+Saw&form=2">Click to Request this Quote</a></p>
                         <ul>
                             <li>Cutting Capacity:
                             <br/>@90&deg;: 1 1/4 round solid,
@@ -163,7 +163,7 @@
                             <li>Coolant included.</li>
                         </ul>
                         <h4 class="bold-text">Dake Model 315CE</h4>
-                        <p class="bold-text"><a href="RFQ.asp?model=Dake+SuperCut+315CE+Cutoff+Saw&form=2">Click to Request this Quote</a></p>
+                        <p class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+SuperCut+315CE+Cutoff+Saw&form=2">Click to Request this Quote</a></p>
                         <ul>
                             <li>Cutting Capacity:
                             <br/>@90&deg;: 2 5/8 round solid,
@@ -179,7 +179,7 @@
                             <li>Coolant included.</li>
                         </ul>
                         <h4 class="bold-text">Dake Model 350CE</h4>
-                        <p class="bold-text"><a href="RFQ.asp?model=Dake+Super-Cut+350CE+Cold+Saw&form=2">Click to Request this Quote</a></p>
+                        <p class="bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Super-Cut+350CE+Cold+Saw&form=2">Click to Request this Quote</a></p>
                         <ul>
                             <li>Cutting Capacity:
                             <br/>@90&deg;:  3 3/8 round solid,
@@ -226,14 +226,14 @@
                         </ul>
                         <p class="bold-text">Dake Technics 350SA Semi-Automatic Cold Saw</p>
                         <p class="bold-text">
-                            <a href="RFQ.asp?model=Dake+350SA+Semi-Automatic+Cutoff+Saw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+350SA+Semi-Automatic+Cutoff+Saw&form=2">Click to Request this Quote</a>
                         </p>
                         <p class="text-justify">
                             Feeds down by itself. Head returns up automatically after each cut.
                         </p>
                         <p class="bold-text">Dake Technics 350A Automatic Cold Saw</p>
                         <p class="bold-text">
-                            <a href="RFQ.asp?model=Dake+350A+Automatic+Cold+Saw&form=2">Click to Request this Quote</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+350A+Automatic+Cold+Saw&form=2">Click to Request this Quote</a>
                         </p>
                         <p class="text-justify">
                             Vise clamps automatically. Head feeds down by itself. After cutting, head returns up automatically and shuts off after the cut. Vise unclamps.
@@ -270,10 +270,10 @@
                             <li>3.5/4.5 hp @ 25/50rpm(non-ferrous) or 1500/3000rpm(ferrous)</li>
                         </ul>
                         <p class="bold-text text-center">
-                            <a href="RFQ.asp?model=DAKE+370S+Semi-Automatic+Cutoff+Saw&form=2">Click to Request a Quote for Semi-Automatic Machine</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=DAKE+370S+Semi-Automatic+Cutoff+Saw&form=2">Click to Request a Quote for Semi-Automatic Machine</a>
                         </p>
                         <p class="bold-text text-center">
-                            <a href="RFQ.asp?model=DAKE+370PP+Automatic+Cold+Saw&form=2">Click to Request a Quote for Automatic Machine</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=DAKE+370PP+Automatic+Cold+Saw&form=2">Click to Request a Quote for Automatic Machine</a>
                         </p>
                         <p class="text-justify">
                             Automatic Cold Saw with 20 inch shuttle feed up that feeds stock with up to 99 strokes
@@ -305,7 +305,7 @@
                 Phone: 773-334-5000<br/>
                 Fax: 773-442-0314
                 <p>
-                    <a href="RFQ.asp?model=Catalog+and+Saws+Information+Request"><b>Click to email Us</b></a>
+                    <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Saws+Information+Request"><b>Click to email Us</b></a>
                 </p>
             </div>
             <div class="footer-mid">
