--- a/m.ironworker.htm
+++ b/m.ironworker.htm
@@ -87,7 +87,7 @@
 							Light duty starter Ironworker machine that has 2 hydraulic powered stations to fit almost any 2 sets of tooling. Comes with a punching head on left side, but there is an optional flat-bar-shear/angle-shear/rod-shear attachment that can be mounted in the hydaulic powered jaw on the right side instead of being built into the machine as is on our larger sizes.
 						</p>
 						<p class="text-center">
-							<a href="RFQ.asp?model=Edwards+25+ton+Punch+Press&amp;form=3" target="_blank"><b>Click to Request this Quote</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+25+ton+Punch+Press&amp;form=3" target="_blank"><b>Click to Request this Quote</b></a>
 						</p>
 					</div>
 				</div>
@@ -136,7 +136,7 @@
 							<a href="http://www.youtube.com/user/EdwardsMfgCo?blend=11&amp;ob=5#p/f/0/nWEFNJNOhAE" target="_blank">Click to see the Youtube VIDEO</a>
 						</p>
 						<p class="text-center bold-text">
-							<a href="RFQ.asp?model=Edwards+40+Ton+Ironworker&amp;form=3" target="_blank">Click to Request this Quote</a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+40+Ton+Ironworker&amp;form=3" target="_blank">Click to Request this Quote</a>
 						</p>
 					</div>
 				</div>
@@ -178,7 +178,7 @@
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="RFQ.asp?model=Edwards+iron+worker+50+Ton&amp;form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+iron+worker+50+Ton&amp;form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
 						</p>
 					</div>
 				</div>
@@ -221,7 +221,7 @@
 							<a href="http://www.youtube.com/watch?v=tz3rgS-mYHk&feature=related" target="_blank">Click to see the Youtube VIDEO</a>
 						</p>
 						<p class="text-center">
-							<a href="RFQ.asp?model=Edwards+Ironworker+55+Ton&form=3" target="_blank"><b>Click to Request this Quote</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+55+Ton&form=3" target="_blank"><b>Click to Request this Quote</b></a>
 						</p>
 					</div>
 				</div>
@@ -257,7 +257,7 @@
 							Optional 2" capacity pipe bender or shop press attachment available.
 						</p>
 						<p class="text-center bold-text">
-							<a href="RFQ.asp?model=Edwards+Iron-worker+60+Ton+Machine&form=3" target="_blank">Click to Request our Discount Price</a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Iron-worker+60+Ton+Machine&form=3" target="_blank">Click to Request our Discount Price</a>
 						</p>
 					</div>
 				</div>
@@ -296,7 +296,7 @@
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="RFQ.asp?model=Edwards+Ironworker+65+Ton&form=3" target="_blank"><b>Click to Request Our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+65+Ton&form=3" target="_blank"><b>Click to Request Our Discount Price</b></a>
 						</p>
 					</div>
 				</div>
@@ -326,7 +326,7 @@
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="RFQ.asp?model=Edwards+iron+worker+75+ton&form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+iron+worker+75+ton&form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
 						</p>
 					</div>
 				</div>
@@ -365,7 +365,7 @@
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="RFQ.asp?model=Edwards+Ironworker+100+Ton&form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+100+Ton&form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
 						</p>
 					</div>
 				</div>
@@ -399,7 +399,7 @@
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="RFQ.asp?model=Edwards+100+Ton+Deluxe+iron+worker&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+100+Ton+Deluxe+iron+worker&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
 					</div>
 				</div>
@@ -432,7 +432,7 @@
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="text-center">
-							<a href="RFQ.asp?model=Edwards+Ironworker+120+Ton+150+Ton&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Ironworker+120+Ton+150+Ton&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
 					</div>
 				</div>
@@ -469,7 +469,7 @@
 							Optional pipe bender, roll bender or shop press attachment available.
 						</p>
 						<p class="bold-text text-center">
-							<a href="RFQ.asp?model=Edwards+Elite+110+Ton+Ironworker+Machine&form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Elite+110+Ton+Ironworker+Machine&form=3" target="_blank"><b>Click to Request our Discount Price</b></a>
 						</p>
 						<p class="bold-text text-center">
 							<a href="http://www.americanmachinetools.com/images/edwards_elite110_ironworker.jpg" target="_blank">Click for a Large Photo of Elite 110 Hydraulic Ironworker</a>
@@ -508,7 +508,7 @@
 							We also include a tool box of 8 round punch &amp; die sets and free shipping to most of USA
 						</p>
 						<p class="bold-text text-center">
-							<a href="RFQ.asp?model=Edwards+Elite+110-65+Ironworker+Machine&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Edwards+Elite+110-65+Ironworker+Machine&form=3" target="_blank"><b>Click to Request Our Lower Discount Price and info packet</b></a>
 						</p>
 						<p class="bold-text text-center">
 							<a href="http://www.americanmachinetools.com/images/ironworker_elite110-65.jpg" target="_blank">Click for a Large Photo of Elite 110-65 Machine</a>
@@ -808,7 +808,7 @@
                 Phone: 773-334-5000<br/>
                 Fax: 773-442-0314
                 <p class="text-center">
-                	<a href="RFQ.asp?model=Catalog+and+Ironworkers+Information+Request"><b>Click to email Us</b></a>
+                	<a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Ironworkers+Information+Request"><b>Click to email Us</b></a>
                 </p>
 			</div>
 			<div class="footer-mid">
