--- a/m.line_boring.htm
+++ b/m.line_boring.htm
@@ -134,7 +134,7 @@
                         <p class="content-price">$2195</p>
                         <p class="bold-text text-center">
                             <img src="http://www.americanmachinetools.com/images/Q150S_line_bore_kit.jpg" alt="Q125-S portable Line Boring Machine includes equipment carrying case with dolly wheels (new!)">
-                            <a href="RFQ.asp?model=Q125-S+Line+Boring+Equipment">Click to request more information be sent to you</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Q125-S+Line+Boring+Equipment">Click to request more information be sent to you</a>
                         </p>
                         <ul>
                             <li>
@@ -184,7 +184,7 @@
                         <p class="content-price">$2295</p>
                         <p class="bold-text text-center">
                             <img src="http://www.americanmachinetools.com/images/q150s_line_boring.jpg" alt="Q150-S portable Line Boring Machine includes equipment carrying case - now with dolly wheels (not shown)">
-                            <a href="RFQ.asp?model=Q150-S+Hole+Line+Boring+Tools">Click to request more information be sent to you</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Q150-S+Hole+Line+Boring+Tools">Click to request more information be sent to you</a>
                         </p>
                         <ul>
                             <li>
@@ -243,7 +243,7 @@
                         <p class="content-price">$2495</p>
                         <p class="bold-text text-center">
                             <img src="http://www.americanmachinetools.com/images/q150s_line_boring.jpg" alt="Q150-S portable Line Boring Machine includes equipment carrying case - now with dolly wheels (not shown)">
-                            <a href="RFQ.asp?model=Q150-S+Hole+Line+Boring+Tools">Click to request more information be sent to you</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=Q150-S+Hole+Line+Boring+Tools">Click to request more information be sent to you</a>
                         </p>
                         <ul>
                             <li>
@@ -302,7 +302,7 @@
                         </p>
                         <p class="content-price text-center">$2695</p>
                         <p class="bold-text text-center">Call 773-334-5000 to order this equipment. Ships within 2 days.</p>
-                        <p class="bold-text text-center"><a href="RFQ.asp?model=Q150-L+Line+Boring+Equipment">Click to request a formal quote and more information be sent to you</a></p>
+                        <p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Q150-L+Line+Boring+Equipment">Click to request a formal quote and more information be sent to you</a></p>
                         <p class="bold-text">
                             The standard Q150-L comes complete with everything you need except the mag drill:
                         </p>
@@ -349,7 +349,7 @@
                         </p>
                         <p class="content-price text-center">$3395</p>
                         <p class="bold-text text-center">Call 773-334-5000 to order this equipment. Ships within 2 days.</p>
-                        <p class="bold-text text-center"><a href="RFQ.asp?model=Q150-XLS+Line+Boring+System">Click to request a formal quote and more information be sent to you</a></p>
+                        <p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Q150-XLS+Line+Boring+System">Click to request a formal quote and more information be sent to you</a></p>
                         <p class="bold-text">
                             The standard Q150-XLS comes complete with everything you need except the mag drill:
                         </p>
@@ -397,7 +397,7 @@
                         </p>
                         <p class="content-price">$3695</p>
                         <p class="bold-text text-center">Call 773-334-5000 to order this equipment. Ships within 2 days.</p>
-                        <p class="bold-text text-center"><a href="RFQ.asp?model=Q175-XLS+Line+Boring+System">Click to request a formal quote and more information be sent to you</a></p>
+                        <p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Q175-XLS+Line+Boring+System">Click to request a formal quote and more information be sent to you</a></p>
                         <p class="bold-text">
                             The standard Q175-XLS comes complete with everything you need except the mag drill:
                         </p>
@@ -445,7 +445,7 @@
                         </p>
                         <p class="content-price">$4295</p>
                         <p class="bold-text text-center">Call 773-334-5000 to order this equipment. Ships within 2 days.</p>
-                        <p class="bold-text text-center"><a href="RFQ.asp?model=Q175-XLM+Line+Boring+System">Click to request a formal quote and more information be sent to you</a></p>
+                        <p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Q175-XLM+Line+Boring+System">Click to request a formal quote and more information be sent to you</a></p>
                         <p class="bold-text">
                             The standard Q150-XLM comes complete with everything you need except the mag drill:
                         </p>
@@ -497,7 +497,7 @@
                         </p>
                         <p class="content-price">E5 - $4990<br/>E8 - $5575</p>
                         <p class="bold-text text-center">Call 773-334-5000 to order this equipment. Ships within 2 days.</p>
-                        <p class="bold-text text-center"><a href="RFQ.asp?model=Q150-E+Line+Boring+Machine">Click to request a formal quote and more information be sent to you</a></p>
+                        <p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Q150-E+Line+Boring+Machine">Click to request a formal quote and more information be sent to you</a></p>
                         <p class="bold-text">
                             The standard Q150-E5 comes complete with:
                         </p>
@@ -550,7 +550,7 @@
                         </p>
                         <p class="content-price">$6395</p>
                         <p class="bold-text text-center">Call 773-334-5000 to order this equipment. Ships within 2 days.</p>
-                        <p class="bold-text text-center"><a href="RFQ.asp?model=Q175-E8+Line+Boring+Machine">Click to request a formal quote and more information be sent to you</a></p>
+                        <p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Q175-E8+Line+Boring+Machine">Click to request a formal quote and more information be sent to you</a></p>
                         <p class="bold-text">
                             The standard Q175-E comes with:
                         </p>
@@ -776,7 +776,7 @@
                             <li>MIG Power supply or wire feeder</li>
                         </ul>
                         <p class="bold-text text-center">
-                            <a href="RFQ.asp?model=BOA-408-AMT+Bore+Welder">Click to request more Bore Welder info and prices be sent to you</a>
+                            <a href="http://www.americanmachinetools.com/RFQ.asp?model=BOA-408-AMT+Bore+Welder">Click to request more Bore Welder info and prices be sent to you</a>
                             <br/>
                             <a href="http://www.youtube.com/watch?v=o4sGPzdluaU&context=C40b18f9ADvjVQa1PpcFOK17bCJGEdOI64uXY_sUsJCIKVnWVDQoo=">Click to see VIDEO of our Bore Welder on the Q150</a>
                         </p>
@@ -1309,7 +1309,7 @@
                 Phone: 773-334-5000<br/>
                 Fax: 773-442-0314
                 <p>
-                    <a href="RFQ.asp?model=Catalog+and+Lathe+Information+Request"><b>Click to email Us</b></a>
+                    <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Lathe+Information+Request"><b>Click to email Us</b></a>
                 </p>
             </div>
             <div class="footer-mid">
