--- a/m.band_saw.htm
+++ b/m.band_saw.htm
@@ -67,7 +67,7 @@
 						<h3>Dake-Johnson SE-712 Band Saw On Roller Cart</h3>
 						<img src="http://www.americanmachinetools.com/images/Dake-SE-Horizontal_Band_Saw.jpg" alt="Dake SE712 horizontal bandsaw machine">
 						<p class="bold-text text-center">
-							<a href="RFQ.asp?model=Dake+SE712+Horizontal+Band+Saw&form=2">Click to request the info packet</a>
+							<a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+SE712+Horizontal+Band+Saw&form=2">Click to request the info packet</a>
 						</p>
 						<p class="content-price">$1650</p>
 						<p>
@@ -88,7 +88,7 @@
 						</ul>
 						<p class="bold-text text-center">Our RongFu brand version of this saw costs $1195</p>
 						<h3>Dake-Johnson SE-912 horizontal bandsaw on roller cart</h3>
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Dake+SE912+Horizontal+Band+Saw&form=2">Click to request the info packet</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+SE912+Horizontal+Band+Saw&form=2">Click to request the info packet</a></p>
 						<p class="content-price">$2595</p>
 						<ul>
 							<li>Cutting Capacity:<br/>@90&deg;: 9" Round, 12 x 9" Flat Bar<br/>@45&deg;: 3.5" Round, 7.5 x 3.5" Flat Bar</li>
@@ -108,7 +108,7 @@
 					<div class="content-main-lt">
 						<h3>Dake-Johnson JH10 workhorse - Made in USA</h3>
 						<img src="http://www.americanmachinetools.com/images/dake_J10_horizontal.jpg" alt="Image of Dake JH10W - Still made in USA">
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Dake-Johnson+JH10-Wet+Horizontal+Band+Saw&form=2">Click to Request a Quote</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+JH10-Wet+Horizontal+Band+Saw&form=2">Click to Request a Quote</a></p>
 						<ul>
 							<li>Cutting Capacity:<br/>@90&deg;: 10" Round, 18" wide Flat Bar<br/>@45&deg;: 5" Round, 11 x 5" Flat Bar</li>
 							<li>Blade speeds: 50, 90, 160, 270 fpm.</li>
@@ -130,7 +130,7 @@
 					<div class="content-main-lt">
 						<h3>BS-250 or 260 Swivel-Head Horizontal Band Saw</h3>
 						<img src="http://www.americanmachinetools.com/images/baileigh_bs250m.jpg" alt="Picture of Baileigh BS-250 horizontal band saw.">
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Baileigh+250M+Horizontal+BandSaw&form=2">Click to Request a Quote</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Baileigh+250M+Horizontal+BandSaw&form=2">Click to Request a Quote</a></p>
 						<p class="bold-text">Available in 110 volts, 1 phase (BS-250) or 220 volts, 1 phase (BS-260).</p>
 						<ul>
 							<li>Cutting Capacity:<br/>@90&deg;: 8.75" Round, 10 x 4" Flat Bar<br/>@45&deg;: 6.5" Round, 5.5" Square</li>
@@ -150,7 +150,7 @@
 					<div class="content-main-lt">
 						<h3>Dake TRAD-301 Swivel-head Horizontal Band Saw Heavy Duty</h3>
 						<img src="http://www.americanmachinetools.com/images/trad-300.jpg" alt="Photo of Dake TRAD300 metal cutting Horizontal Mitering Band Saw">
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Dake+TRAD300+Horizontal+Band+Saw&form=2">Click to Request a Quote</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+TRAD300+Horizontal+Band+Saw&form=2">Click to Request a Quote</a></p>
 						<p class="bold-text">220 volts, 3 phase</p>
 						<ul>
 							<li>Cutting Capacity:<br/>@90&deg;: 10" Round, 11.75 x 7" flat bar<br/>@45&deg;: 7.5" Round, 7.5 x 6.5" flat bar</li>
@@ -173,7 +173,7 @@
 					<div class="content-main-lt">
 						<h3>Dake-Johnson LE-10A Automatic Horizontal Band Saw</h3>
 						<img src="http://www.americanmachinetools.com/images/Automatic_bandsaw.jpg" alt="Dake Heavy Duty Mitering band saws">
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Dake-Johnson+LE10A+Automatic+Horizontal+BandSaw&form=2">Click to Request the LE10A Quote</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+LE10A+Automatic+Horizontal+BandSaw&form=2">Click to Request the LE10A Quote</a></p>
 						<ul>
 							<li>Cutting Capacity:<br/>@90&deg;: 10" Round 7" x 12" Flat Bar</li>
 							<li>Blade Width: 1"</li>
@@ -190,7 +190,7 @@
 					<div class="content-main-lt">
 						<h3>AMADA HA250W Automatic Horizontal Band Saw</h3>
 						<img src="http://www.americanmachinetools.com/images/amada_bandsaw-ha250w.jpg" alt="Amada HA-250W Band Saw">
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Amada+HA250W+Automatic+Horizontal+BandSaw&form=2">Click to Request a Quote for Amada HA250W</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Amada+HA250W+Automatic+Horizontal+BandSaw&form=2">Click to Request a Quote for Amada HA250W</a></p>
 						<ul>
 							<li>Cutting Capacity Round (dia.): 0.5" - 10" [13 - 250mm]</li>
 							<li>Cut Capacity Rectangle (W x H): 12" x 10" [300 x 250mm]</li>
@@ -228,10 +228,10 @@
 						<h3>VERTICUT 280S (straight cut) &amp; 280M (mitering)</h3>
 						<img src="http://www.americanmachinetools.com/images/verticut_280s.jpg" alt="Verticut 280S Horizontal BandSaw">
 						<p><i class="bold-text text-center">280S - straight cuts plus swivel vise</i></p>
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Verticut+280S+Horizontal+BandSaw&form=2">Click to Request a Quote for the 280S</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Verticut+280S+Horizontal+BandSaw&form=2">Click to Request a Quote for the 280S</a></p>
 						<img src="http://www.americanmachinetools.com/images/verticut_280m.jpg" alt="Verticut 280M Mitering Horizontal Band Saw">
 						<p><i class="bold-text text-center">280M - head swivels for miter cuts</i></p>
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Verticut+280M+Horizontal+Band+Saw&form=2">Click to Request a Quote for the 280M</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Verticut+280M+Horizontal+Band+Saw&form=2">Click to Request a Quote for the 280M</a></p>
 						<ul>
 							<li>Cutting Capacity @90&deg;: 11" Round </li>
 							<li>Cutting Capacity @45&deg;: 10" Round </li>
@@ -273,7 +273,7 @@
 					<div class="content-main-lt">
 						<h3>VERTICUT 400M</h3>
 						<img src="http://www.americanmachinetools.com/images/verticut_400m.jpg" alt="Verticut 400M large miter cutting machine">
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Verticut+400M+Horizontal+Band+Saw&form=2">Click to Request a Quote for the 400M</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Verticut+400M+Horizontal+Band+Saw&form=2">Click to Request a Quote for the 400M</a></p>
 						<p class="bold-text">Features:</p>
 						<ul>
 							<li>Cutting Capacity@90&deg;: 16" Round</li>
@@ -338,9 +338,9 @@
 									<tbody>
 										<tr>
 											<td class="mob-tab-cell">Machine</td>
-											<td class="mob-tab-cell-nowrap">KV50<br/><a href="RFQ.asp?model=KV50+Vertical+Band-Saw&form=2">Request Quote</a></td>
-											<td class="mob-tab-cell-nowrap">KV60<br/><a href="RFQ.asp?model=KV60+Vertical+BandSaw&form=2">Request Quote</a></td>
-											<td class="mob-tab-cell-nowrap">KV100<br/><a href="RFQ.asp?model=KV100+Vertical+Band-Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap">KV50<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50+Vertical+Band-Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap">KV60<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV60+Vertical+BandSaw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap">KV100<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100+Vertical+Band-Saw&form=2">Request Quote</a></td>
 										</tr>
 										<tr>
 											<td class="mob-tab-cell">Throat</td>
@@ -419,8 +419,8 @@
 									<tbody>
 										<tr>
 											<td class="mob-tab-cell">Machine</td>
-											<td class="mob-tab-cell-nowrap">KV50A<br/><a href="RFQ.asp?model=KV50A+Vertical+Band-Saw&form=2">Request Quote</a></td>
-											<td class="mob-tab-cell-nowrap">KV100A<br/><a href="RFQ.asp?model=KV100A+Vertical+BandSaw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap">KV50A<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV50A+Vertical+Band-Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap">KV100A<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=KV100A+Vertical+BandSaw&form=2">Request Quote</a></td>
 										</tr>
 										<tr>
 											<td class="mob-tab-cell">Throat</td>
@@ -485,7 +485,7 @@
 								 			<td class="mob-tab-cell">Max Table Tilts</td>
 								 		</tr>
 								 		<tr>
-								 			<td class="mob-tab-cell-nowrap">Dake Model 14-10<br/>Made in USA<br/><a href="RFQ.asp?model=Dake+14-10+Vertical+Band+Saw&form=2">Request Quote</a></td>
+								 			<td class="mob-tab-cell-nowrap">Dake Model 14-10<br/>Made in USA<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+14-10+Vertical+Band+Saw&form=2">Request Quote</a></td>
 								 			<td class="mob-tab-cell">70<br/>140<br/>270<br/>540</td>
 								 			<td class="mob-tab-cell">1</td>
 								 			<td class="mob-tab-cell">14"</td>
@@ -494,7 +494,7 @@
 								 			<td class="mob-tab-cell-nowrap">5&deg; Left<br/>45&deg;Right</td>
 								 		</tr>
 								 		<tr>
-								 			<td class="mob-tab-cell-nowrap">Dake Trademaster<br/>Adjustable blade feed pressure<br/>Work light.<br/>Extra Heavy Duty.<br/>Made in USA<br/><a href="RFQ.asp?model=Dake+Trademaster+Vertical+Band+Saw&form=2">Request Quote</a></td>
+								 			<td class="mob-tab-cell-nowrap">Dake Trademaster<br/>Adjustable blade feed pressure<br/>Work light.<br/>Extra Heavy Duty.<br/>Made in USA<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Trademaster+Vertical+Band+Saw&form=2">Request Quote</a></td>
 								 			<td class="mob-tab-cell-nowrap">Variable<br/>50 to 500</td>
 								 			<td class="mob-tab-cell">1.5</td>
 								 			<td class="mob-tab-cell">19.5"</td>
@@ -510,7 +510,7 @@
 					<div class="content-main-lt">
 						<h3>Dake Work-A-Matic SXC Vertical Band Saw</h3>
 						<img src="http://www.americanmachinetools.com/images/Dake-SXC-Vertical_Band_Saw.jpg" alt="Dake Work-A-Matic SXC gravity feed Vertical Band Saw">
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Dake+Work-A-Matic-SXC+Vertical+Band+Saw&form=2">Click to Request this Quote</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake+Work-A-Matic-SXC+Vertical+Band+Saw&form=2">Click to Request this Quote</a></p>
 						<p class="bold-text">Features:</p>
 						<ul>
 							<li>Automatic gravity feed</li>
@@ -551,7 +551,7 @@
 											<td class="mob-tab-cell">Max Blade Width</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap">Dake-Johnson F-16<br/><a href="RFQ.asp?model=Dake-Johnson+F-16+Vertical+BandSaw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap">Dake-Johnson F-16<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+F-16+Vertical+BandSaw&form=2">Request Quote</a></td>
 											<td class="mob-tab-cell">50 - 590</td>
 											<td class="mob-tab-cell">1.5</td>
 											<td class="mob-tab-cell">16"</td>
@@ -561,7 +561,7 @@
 											<td class="mob-tab-cell">5/8"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell">Dake-Johnson V-24<br/><a href="RFQ.asp?model=Dake-Johnson+V-24+Vertical+Band+Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell">Dake-Johnson V-24<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-24+Vertical+Band+Saw&form=2">Request Quote</a></td>
 											<td class="mob-tab-cell-nowrap">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">23"</td>
@@ -571,7 +571,7 @@
 											<td class="mob-tab-cell">1"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap">Dake-Johnson VH-24<br/><a href="RFQ.asp?model=Dake-Johnson+VH-24+Vertical+Band+Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap">Dake-Johnson VH-24<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-24+Vertical+Band+Saw&form=2">Request Quote</a></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">23"</td>
@@ -581,7 +581,7 @@
 											<td class="mob-tab-cell">1"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell">Dake-Johnson V-40<br/><a href="RFQ.asp?model=Dake-Johnson+V-40+Vertical+Band+Saw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell">Dake-Johnson V-40<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+V-40+Vertical+Band+Saw&form=2">Request Quote</a></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">41"</td>
@@ -591,7 +591,7 @@
 											<td class="mob-tab-cell">3/4"</td>
 										</tr>
 										<tr>
-											<td class="mob-tab-cell-nowrap">Dake-Johnson VH-40<br/><a href="RFQ.asp?model=Dake-Johnson+VH-40+Vertical+BandSaw&form=2">Request Quote</a></td>
+											<td class="mob-tab-cell-nowrap">Dake-Johnson VH-40<br/><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dake-Johnson+VH-40+Vertical+BandSaw&form=2">Request Quote</a></td>
 											<td class="mob-tab-cell">50 - 4250</td>
 											<td class="mob-tab-cell">2.2</td>
 											<td class="mob-tab-cell">41"</td>
@@ -612,12 +612,12 @@
 						<img src="http://www.americanmachinetools.com/images/vertical_tilt_saw.jpg" alt="Photo of Verticut Tiltable Head Double Miter Band Saw machine">
 						<p class="bold-text text-center"><i>VERTICUT 500MV</i></p>
 						<p class="text-justify">Cuts up to 18" wide x 25" high stuctural beams or 18" diameter pipe.</p>
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Tilting-Head+Vertical+Bandsaw+Verticut+500MV&form=2">Click to Request a Quote for the 500MV Saw</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Tilting-Head+Vertical+Bandsaw+Verticut+500MV&form=2">Click to Request a Quote for the 500MV Saw</a></p>
 						<img src="http://www.americanmachinetools.com/images/vertical_tilt_saw2.jpg" alt="Tilts left 45 degrees">
 						<img src="http://www.americanmachinetools.com/images/vertical_tilt_saw3.jpg" alt="Tilts right 45 degrees">
 						<p class="bold-text text-center"><i>VERTICUT 360MVC</i></p>
 						<p class="text-justify">Cuts up to 14" wide x 17" high stuctural beams or 14" diameter pipe (12" at 45&deg;).</p>
-						<p class="bold-text text-center"><a href="RFQ.asp?model=Verticut+360MVC+Tilting+Head+Vertical+Bandsaw&form=2">Click to Request a Quote for the 360MVC Saw</a></p>
+						<p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Verticut+360MVC+Tilting+Head+Vertical+Bandsaw&form=2">Click to Request a Quote for the 360MVC Saw</a></p>
 						<p class="bold-text">Verticut:</p>
 						<p class="text-justify">The sawing head of this machine can tilt to miter cut up to 45&deg; left and 45&deg; right. Great for cutting structurals, pipe and tubing at 90&deg; or 45&deg; or compound angles.</p>
 						<p class="bold-text">Features:</p>
@@ -662,7 +662,7 @@
                 Phone: 773-334-5000<br/>
                 Fax: 773-442-0314
                 <p>
-                    <a href="RFQ.asp?model=Catalog+and+Lathe+Information+Request"><b>Click to email Us</b></a>
+                    <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+and+Lathe+Information+Request"><b>Click to email Us</b></a>
                <br>
                     <a class="bold-text" href="http://www.americanmachinetools.com/machinery_safety.htm">Click for our Machinery Safety webpage</a>
                 </p>
