--- a/m.hydraulic_shear.htm
+++ b/m.hydraulic_shear.htm
@@ -67,7 +67,7 @@
                     </ul>
 
 
-                    <p class="text-center bold-text"><a href="RFQ.asp?model=Dreis-Krump+FS-5216+Sheet+Metal+Foot+Shear+RFQ&form=3">Click to request a quote for this machine</a></p>
+                    <p class="text-center bold-text"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+FS-5216+Sheet+Metal+Foot+Shear+RFQ&form=3">Click to request a quote for this machine</a></p>
 
 
                 </div>
@@ -76,7 +76,7 @@
                     <p>
                         <img src="http://www.americanmachinetools.com/images/jet_air_shear.jpg" alt="JET air powered Pneumatic Shear">
                     </p>
-                    <p class="bold-text text-center"><a href="RFQ.asp?model=Jet+PS-1652E+Sheet+Metal+Shear+RFQ&amp;form=3" target="_blank">Click 
+                    <p class="bold-text text-center"><a href="http://www.americanmachinetools.com/RFQ.asp?model=Jet+PS-1652E+Sheet+Metal+Shear+RFQ&amp;form=3" target="_blank">Click 
               to Request this Machine Quote</a>
                         <p>
                             <p class="bold-text text-justify">Model PS-1652E with 16 gauge x 52 inch capacity<br>this machine connects to your air compressor. </p>
@@ -127,17 +127,17 @@
                             <tr>
                                 <td></td>
                                 <td><b>HS-414<br>
-		  <a href="RFQ.asp?model=Dreis-Krump+HS-414+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
+		  <a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+HS-414+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
 		  
                 Request
                 a Quote</a></b></td>
-                                <td><b>HS-410<br><a href="RFQ.asp?model=Dreis-Krump+HS-410+Sheet+Metal+Shears+RFQ&form=3" target="_blank"> 
+                                <td><b>HS-410<br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+HS-410+Sheet+Metal+Shears+RFQ&form=3" target="_blank"> 
                 Request a Quote</a></b></td>
-                                <td><b>HS-510<br><a href="RFQ.asp?model=Dreis-Krump+HS-510+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
+                                <td><b>HS-510<br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+HS-510+Sheet+Metal+Shear+RFQ&form=3" target="_blank"> 
                 Request
                 a Quote</a></b>
                                 </td>
-                                <td><b>HS-612<br><a href="RFQ.asp?model=Dreis-Krump+HS-612+Sheet+Metal+Shear+RFQ&amp;form=3" target="_blank"> 
+                                <td><b>HS-612<br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+HS-612+Sheet+Metal+Shear+RFQ&amp;form=3" target="_blank"> 
                 Request
                 a Quote</a></b></td>
                             </tr>
@@ -265,7 +265,7 @@ H.P.</b></td>
                             </tr>
 
                             <tr>
-                                <td><b>EHS 1540 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+EHS-1540+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>EHS 1540 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+EHS-1540+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>3/16" x 63"</td>
                                 <td>4.5 x 1600</td>
@@ -279,7 +279,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 1565 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-1565+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 1565 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-1565+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/4" x 63"</td>
                                 <td>6.5 x 1600</td>
@@ -292,7 +292,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 1595 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-1595+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 1595 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-1595+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>3/8" x 63"</td>
                                 <td>9.5 x 1600</td>
@@ -305,7 +305,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 15130<br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-15130+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 15130<br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-15130+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/2" X 63"</td>
                                 <td>13 x1600</td>
@@ -318,7 +318,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 2065 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-2065+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 2065 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-2065+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/4" x 80"</td>
                                 <td>6.5 x 2050</td>
@@ -331,7 +331,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 2095 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-2095+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 2095 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-2095+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>3/8" x 80"</td>
                                 <td>9.5 x 2050</td>
@@ -344,7 +344,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 20130 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-20130+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 20130 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-20130+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/2" x 80"</td>
                                 <td>13 x 2050</td>
@@ -357,7 +357,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 2532 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-2532+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 2532 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-2532+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td> 10 gauge x 98"</td>
                                 <td>3 x 2500</td>
@@ -369,7 +369,7 @@ H.P.</b></td>
                                 <td>7300</td>
                             </tr>
                             <tr>
-                                <td><b>EHS 2540 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+EHS-2540+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>EHS 2540 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+EHS-2540+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td> 3/16" x 98"</td>
                                 <td>4.5 x 2500</td>
@@ -382,7 +382,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 2565 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-2565+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 2565 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-2565+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/4" x 98"</td>
                                 <td>6.5 x 2500</td>
@@ -397,7 +397,7 @@ H.P.</b></td>
 
 
                             <tr>
-                                <td><b>HS 2595 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-2595+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 2595 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-2595+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>3/8" x 98"</td>
                                 <td>9.5 x 2500</td>
@@ -410,7 +410,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>HS 25130 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-25130+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 25130 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-25130+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/2" x 98"</td>
                                 <td>13 x 2500</td>
@@ -422,7 +422,7 @@ H.P.</b></td>
                                 <td>18000</td>
                             </tr>
                             <tr>
-                                <td><b>EHS 3132 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+EHS-3132+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>EHS 3132 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+EHS-3132+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>10 gauge x 122"</td>
                                 <td>13 x 2500</td>
@@ -435,7 +435,7 @@ H.P.</b></td>
 
                             </tr>
                             <tr>
-                                <td><b>EHS 3140 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+EHS-3140+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>EHS 3140 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+EHS-3140+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>3/16" x 122"</td>
                                 <td>4.5 x 3100</td>
@@ -447,7 +447,7 @@ H.P.</b></td>
                                 <td>10550</td>
                             </tr>
                             <tr>
-                                <td><b>HS 3165 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-3165+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 3165 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-3165+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/4" x 122"</td>
                                 <td>6.5 x 3100</td>
@@ -471,7 +471,7 @@ H.P.</b></td>
                                 <td>17000</td>
                             </tr>
                             <tr>
-                                <td><b>HS 31130 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-31130+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 31130 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-31130+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/2" x 122"</td>
                                 <td>13 x 3100</td>
@@ -483,7 +483,7 @@ H.P.</b></td>
                                 <td>22000</td>
                             </tr>
                             <tr>
-                                <td><b>HS 4165 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-4165+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 4165 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-4165+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>1/4" x 161"</td>
                                 <td>6.5 x 4100</td>
@@ -495,7 +495,7 @@ H.P.</b></td>
                                 <td>24000</td>
                             </tr>
                             <tr>
-                                <td><b>HS 4195 <br><a href="RFQ.asp?model=Chicago+Dreis-Krump+HS-4195+Hydraulic+Shear&amp;form=3" target="_blank">Request 
+                                <td><b>HS 4195 <br><a href="http://www.americanmachinetools.com/RFQ.asp?model=Chicago+Dreis-Krump+HS-4195+Hydraulic+Shear&amp;form=3" target="_blank">Request 
                 this Quote</a></b></td>
                                 <td>3/8" X 161"</td>
                                 <td>9.5 x 4100</td>
@@ -581,7 +581,7 @@ H.P.</b></td>
 
                                 <tr>
                                     <td>HN-10<br>
-                                        <a href="RFQ.asp?model=Dreis-Krump+Corner+Notcher+HN-10+RFQ&form=2" target="_blank">Request 
+                                        <a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Corner+Notcher+HN-10+RFQ&form=2" target="_blank">Request 
               Quote</a></td>
                                     <td>10 gauge (.135")</td>
                                     <td>16 gauge (.06)</td>
@@ -594,7 +594,7 @@ H.P.</b></td>
                                 </tr>
                                 <tr>
                                     <td>HN-25<br>
-                                        <a href="RFQ.asp?model=Dreis-Krump+Hydraulic+Metal+Notcher+HN-25+RFQ&form=2" target="_blank">Request 
+                                        <a href="http://www.americanmachinetools.com/RFQ.asp?model=Dreis-Krump+Hydraulic+Metal+Notcher+HN-25+RFQ&form=2" target="_blank">Request 
               Quote</a></td>
                                     <td>1/4"</td>
                                     <td>10 gauge (.135")</td>
@@ -652,7 +652,7 @@ H.P.</b></td>
             <div class="footer-mid">
                 <b class="footer-mid-amt">American Machine Tools Corp</b><br/> 5864 Northwest Hwy<br/> Chicago IL 60631 USA<br/> Phone: 773-334-5000<br/> Fax: 773-442-0314
                 <p>
-                    <a href="RFQ.asp?model=Catalog+Information+Request"><b>Click to email Us</b></a>
+                    <a href="http://www.americanmachinetools.com/RFQ.asp?model=Catalog+Information+Request"><b>Click to email Us</b></a>
                 </p>
             </div>
             <div class="footer-mid">
